[package]
name = "evm"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
numext-fixed-hash = { git = "https://github.com/cryptape/rust-numext" }
numext-fixed-uint = { git = "https://github.com/cryptape/rust-numext" }
hex = "0.3"
tiny-keccak = "1.4.2"
log = "0.4.0"
